# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml
gendiff/: diff.py  engine.py  gendiff.py  generate_diff.py  parser.py  parsers.py  render.py
gendiff/format/: __init__.py  default.py  json.py  plain.py
gendiff/formatters/: choose_formatter.py  json_formatter.py  jsontxt_formatter.py  plain_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_default_format.py  test_flat_json.py  test_flat_yml.py  test_gendiff.py  test_json.py  test_json_format.py  test_json_gendiff.py  test_nested_json.py  test_nested_yml.py  test_plain_format.py  test_plain_json.py  test_plain_yml.py  test_yml_gendiff.py
tests/fixtures/: after.json  after.yml  after_extra.yaml  after_extra_nested.yaml  after_flat.yml  before.yml  before_extra.yml  before_extra_nested.yml  before_nested.json  correct_answer.txt  expected.json  expected_extra_nested.txt  expected_json.txt  expected_nested.txt  expected_yml.txt
